--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
     </ul>
 
     <div class="product-card">
-      <img src="placeholder-jorts.jpg" alt="Jorts Style A">
+      <img src="style1.png" alt="Jorts Style A">
       <p><strong>Style A:</strong> Light-wash oversized jorts with ripped thigh and embroidered ace of spades patch.</p>
     </div>
     <div class="product-card">
-      <img src="placeholder-jorts2.jpg" alt="Jorts Style B">
+      <img src="style2.png" alt="Jorts Style B">
       <p><strong>Style B:</strong> Black acid-wash with red hearts down the side seam. Street & sleek.</p>
     </div>
     <blockquote>"These jorts changed my summer. Everyone asked where I got them." – Happy Customer</blockquote>
